sample_application/basic-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: njj-test
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
