sample_application/basic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: njj-ingress
  namespace: njj-test
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: njj.com
    http:
      paths:
      - path: /
        pathType: Exact  
        backend:
          service:
            name: nginx-service
            port: 
              number: 80
